# buildwithai

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  langchain_tools_as_of_0.3.1.md  pyproject.toml
src/: do_python_ticket.py  langchain_course.ipynb  sigma7_stuff.ipynb  test_functions.py  try_out_code_gen.ipynb  try_out_langchain_jira_agent.ipynb  try_out_tools_support.ipynb  working_lcel_code.ipynb
src/buildwithai/: langchain_tools.py
src/connections/: connector.py
